# VCPChat

./: .gitignore  README.md  main.html  main.js  package-lock.json  package.json  preload.js  pyproject.toml  renderer.js  run_info_listener_silent.vbs  style.css  testwallpaper.html  weathertest.html  启动全部.vbs  编译并部署音频引擎.bat
Agenttaskmodules/: task.css  task.html  task.js
Assistantmodules/: assistant-bar.html  assistant-bar.js  assistant.css  assistant.html  assistant.js
Canvasmodules/: canvas.css  canvas.js
ComfyUImodules/: ComfyUILoader.js  ComfyUIModules-Architecture.md  ComfyUI_StateManager.js  ComfyUI_UIManager.js  PathResolver.js  README.md  comfyUIConfig.js  comfyUIHandlers.js  comfyui.css
Desktopmodules/: README.md  VCPdesktop介绍文档.md  desktop.css  desktop.html  desktop.js  提示词示例.md
Flowlockmodules/: README.md  flowlock-integration.js  flowlock-protocol.js  flowlock.css  flowlock.js
Forummodules/: forum.js
Groupmodules/: groupSemanticRouter.config.example.json  groupSemanticRouter.js  groupSettingsMarkup.js  groupchat.js  grouprenderer.js  topicTitleManager.js
Memomodules/: memo-graph.js  memo-workbench.js  memo.css  memo.html  memo.js
Musicmodules/: music-ui.js  (+12 more)
rust_assistant_engine/: Cargo.toml
rust_assistant_engine/docs/: x11_event_backend_plan.md
rust_assistant_engine/src/: capture.rs  capture_linux_wayland.rs  capture_linux_x11.rs  capture_linux_x11_event.rs  capture_macos.rs  history.rs  linux_platform.rs  main.rs  metrics.rs  screenshot.rs  table_detection.rs
rust_assistant_engine/ui/: assistant-bar.js  assistant.css  assistant.js
(+250 files in other folders)
